# vk_gltf_renderer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: FindNvproCore2.cmake
docs/: developer.md  resources.md  user-guide.md
shaders/: gltf_scene_io.h.slang
src/: gltf_scene.cpp  main.cpp  ui_renderer.cpp  utils.hpp
